fix: README file updated to describe error handling

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "pkg": "ng-packagr -p ng-package.json"
+    "pkg": "ng-packagr -p ng-package.json && cd dist/ && npm pack && cd .."
   },
   "private": true,
   "peerDependencies": {
