--- a/package.json
+++ b/package.json
@@ -61,6 +61,6 @@
     "zone.js": "^0.8.14"
   },
   "dependencies": {
-    "bl-model": "../bl-dist/bl-model-0.2.1.tgz"
+    "bl-model": "../bl-model-0.2.1.tgz"
   }
 }
