--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
 	},
 	"devDependencies": {
 		"@angular/animations": "^5.0.0",
+		"@angular/cli": "^1.5.5",
 		"@angular/common": "^5.0.0",
 		"@angular/compiler": "^5.0.0",
 		"@angular/compiler-cli": "^5.0.0",
 		"@angular/core": "^5.0.0",
-		"@angular/cli": "^1.5.5",
 		"@angular/forms": "^5.0.0",
 		"@angular/http": "^5.0.0",
 		"@angular/language-service": "^5.0.0",
@@ -59,11 +59,11 @@
 		"rxjs": "^5.4.2",
 		"ts-node": "~3.2.0",
 		"tslint": "~5.3.2",
-		"typescript": "~2.3.3",
+		"typescript": "^2.4.2",
 		"zone.js": "^0.8.14"
 	},
 	"dependencies": {
-		"bl-model": "^0.2.2",
+		"bl-model": "^0.10.1",
 		"ng-packagr": "^1.6.0"
 	}
 }
