--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
 		"zone.js": "^0.8.14"
 	},
 	"dependencies": {
+		"@auth0/angular-jwt": "^1.0.0-beta.9",
+		"angular-2-local-storage": "^1.0.1",
 		"bl-model": "^0.10.1",
-		"ng-packagr": "^1.6.0"
+		"ng-packagr": "^1.6.0",
+		"ngx-cookie": "^2.0.1"
 	}
 }
