--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
 	"dependencies": {
 		"@auth0/angular-jwt": "^1.0.0-beta.9",
 		"angular-2-local-storage": "^1.0.1",
-		"bl-model": "^0.10.1",
+		"angular2-jwt": "^0.2.3",
+		"bl-model": "^0.10.2",
 		"ng-packagr": "^1.6.0",
 		"ngx-cookie": "^2.0.1"
 	}
