--- a/src/app/package.json
+++ b/src/app/package.json
@@ -1,12 +1,12 @@
 {
 	"$schema": "../../node_modules/ng-packagr/package.schema.json",
-	"name": "bl-connect",
-	"private": false,
+	"name": "@wizardcoder/bl-connect",
+	"private": true,
 	"version": "0.4.2",
 	"peerDependencies": {
 		"@angular/common": "^5.1.0",
 		"@angular/core": "^5.1.0",
-		"bl-model": "^0.11.1"
+		"@wizardcoder/bl-model": "^0.13.0"
 	},
 	"dependencies": {
 		"angular2-jwt": "^0.2.3",
