--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"test": "ng test",
 		"lint": "ng lint",
 		"e2e": "ng e2e",
-		"build:lib": "ng-packagr -p src/app/package.json",
+		"build:lib": "ng-packagr",
+		"publish": "build:lib && npm publish ./dist/@wizardcoder/bl-connect",
 		"blink": "npm run build:lib && npm link dist/bl-connect"
 	},
+	"$schema": "../../node_modules/ng-packagr/package.schema.json",
 	"private": false,
 	"devDependencies": {
 		"@angular/cli": "1.7.0-beta.2",
@@ -47,9 +49,12 @@
 		"zone.js": "^0.8.20"
 	},
 	"dependencies": {
-		"@auth0/angular-jwt": "^1.0.0-beta.10",
-		"@wizardcoder/bl-model": "^0.13.0",
 		"angular-2-local-storage": "^1.0.1",
 		"angular2-jwt": "^0.2.3"
+	},
+	"peerDependencies": {
+		"@angular/common": "^5.1.0",
+		"@angular/core": "^5.1.0",
+		"@wizardcoder/bl-model": "^0.13.0"
 	}
 }
