--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"lint": "ng lint",
 		"e2e": "ng e2e",
 		"build:lib": "ng-packagr",
-		"publish": "build:lib && npm publish ./dist/@wizardcoder/bl-connect",
+		"lib:pub": "npm run build:lib && npm publish ./dist/@wizardcoder/bl-connect",
 		"blink": "npm run build:lib && npm link dist/bl-connect"
 	},
 	"$schema": "../../node_modules/ng-packagr/package.schema.json",
