--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@types/jasmine": "~2.5.53",
 		"@types/jasminewd2": "~2.0.2",
 		"@types/node": "^6.0.96",
+		"@wizardcoder/bl-model": "^0.13.3",
 		"codelyzer": "~3.1.1",
 		"core-js": "^2.5.3",
 		"jasmine-core": "~2.6.2",
@@ -55,6 +56,6 @@
 	"peerDependencies": {
 		"@angular/common": "^5.1.0",
 		"@angular/core": "^5.1.0",
-		"@wizardcoder/bl-model": "^0.13.0"
+		"@wizardcoder/bl-model": "^0.13.3"
 	}
 }
