feat: upgraded from Angular 5.1 to Angular 6

--- a/package.json
+++ b/package.json
@@ -1,61 +1,61 @@
 {
-	"name": "@wizardcoder/bl-connect",
-	"version": "0.5.14",
-	"license": "MIT",
-	"scripts": {
-		"ng": "ng",
-		"start": "ng serve",
-		"test": "ng test",
-		"lint": "ng lint",
-		"e2e": "ng e2e",
-		"build:lib": "ng-packagr",
-		"lib:pub": "npm run build:lib && npm publish ./dist/@wizardcoder/bl-connect",
-		"blink": "npm run build:lib && npm link dist/bl-connect"
-	},
-	"$schema": "../../node_modules/ng-packagr/package.schema.json",
-	"private": false,
-	"devDependencies": {
-		"@angular/cli": "1.7.0-beta.2",
-		"@angular/common": "^5.1.0",
-		"@angular/compiler": "^5.1.0",
-		"@angular/compiler-cli": "^5.1.0",
-		"@angular/core": "^5.1.0",
-		"@angular/forms": "^5.1.0",
-		"@angular/http": "^5.1.0",
-		"@angular/language-service": "^5.1.0",
-		"@angular/platform-browser": "^5.1.0",
-		"@angular/platform-browser-dynamic": "^5.1.0",
-		"@types/jasmine": "~2.5.53",
-		"@types/jasminewd2": "~2.0.2",
-		"@types/node": "^6.0.96",
-		"codelyzer": "~3.1.1",
-		"core-js": "^2.5.3",
-		"jasmine-core": "~2.6.2",
-		"jasmine-spec-reporter": "~4.1.0",
-		"karma": "~1.7.0",
-		"karma-chrome-launcher": "~2.1.1",
-		"karma-cli": "~1.0.1",
-		"karma-coverage-istanbul-reporter": "^1.4.1",
-		"karma-jasmine": "^1.1.1",
-		"karma-jasmine-html-reporter": "^0.2.2",
-		"ng-packagr": "^2.0.0",
-		"protractor": "~5.1.2",
-		"rxjs": "^5.5.6",
-		"ts-node": "~3.2.0",
-		"tslint": "~5.3.2",
-		"typescript": "~2.6.2",
-		"webpack": "^3.10.0",
-		"webpack-dev-server": "^2.11.1",
-		"zone.js": "^0.8.20"
-	},
-	"dependencies": {
-		"@wizardcoder/bl-model": "^0.14.3",
-		"angular-2-local-storage": "^1.0.1",
-		"angular2-jwt": "^0.2.3"
-	},
-	"peerDependencies": {
-		"@angular/common": "^5.1.0",
-		"@angular/core": "^5.1.0",
-		"@wizardcoder/bl-model": "^0.14.1"
-	}
+  "name": "@wizardcoder/bl-connect",
+  "version": "0.5.14",
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "build:lib": "ng-packagr",
+    "lib:pub": "npm run build:lib && npm publish ./dist/@wizardcoder/bl-connect",
+    "blink": "npm run build:lib && npm link dist/bl-connect"
+  },
+  "$schema": "../../node_modules/ng-packagr/package.schema.json",
+  "private": false,
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^0.6.8",
+    "@angular-devkit/core": "^0.6.8",
+    "@angular/cli": "6.0.8",
+    "@angular/common": "6.0.6",
+    "@angular/compiler": "6.0.6",
+    "@angular/compiler-cli": "6.0.6",
+    "@angular/core": "6.0.6",
+    "@angular/forms": "6.0.6",
+    "@angular/http": "6.0.6",
+    "@angular/language-service": "6.0.6",
+    "@angular/platform-browser": "6.0.6",
+    "@angular/platform-browser-dynamic": "6.0.6",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "^6.0.96",
+    "@wizardcoder/bl-model": "^0.14.7",
+    "codelyzer": "~3.1.1",
+    "core-js": "^2.5.3",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.4.1",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^2.0.0",
+    "protractor": "~5.1.2",
+    "rxjs": "^6.2.1",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.3.2",
+    "typescript": "2.7.2",
+    "webpack": "^4.12.1",
+    "webpack-dev-server": "^2.11.1",
+    "zone.js": "^0.8.26"
+  },
+  "dependencies": {
+    "angular2-jwt": "^0.2.3"
+  },
+  "peerDependencies": {
+    "@angular/common": "6.0.6",
+    "@angular/core": "6.0.6"
+  }
 }
