--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^2.0.0",
-    "protractor": "~5.1.2",
+    "protractor": "^5.3.2",
     "rxjs": "^6.2.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
@@ -52,7 +52,7 @@
     "zone.js": "^0.8.26"
   },
   "dependencies": {
-    "angular2-jwt": "^0.2.3"
+    "@auth0/angular-jwt": "^2.0.0"
   },
   "peerDependencies": {
     "@angular/common": "6.0.6",
