--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "karma-coverage-istanbul-reporter": "^1.4.1",
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^2.0.0",
     "protractor": "^5.3.2",
     "rxjs": "^6.2.1",
     "ts-node": "~3.2.0",
@@ -49,9 +48,8 @@
     "typescript": "2.7.2",
     "webpack": "^4.12.1",
     "webpack-dev-server": "^2.11.1",
-    "zone.js": "^0.8.26"
-  },
-  "dependencies": {
+    "zone.js": "^0.8.26",
+    "ng-packagr": "^3.0.3",
     "@auth0/angular-jwt": "^2.0.0"
   },
   "peerDependencies": {
