fix: updated DocumentService and CachedDocumentService to not be generic

--- a/package.json
+++ b/package.json
@@ -1,59 +1,65 @@
 {
-  "name": "@wizardcoder/bl-connect",
-  "version": "0.6.4-0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "build:lib": "ng-packagr",
-    "lib:pub": "npm run build:lib && npm publish ./dist/@wizardcoder/bl-connect",
-    "blink": "npm run build:lib && npm link dist/bl-connect"
-  },
-  "$schema": "../../node_modules/ng-packagr/package.schema.json",
-  "private": false,
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.6.8",
-    "@angular-devkit/core": "^0.6.8",
-    "@angular/cli": "6.0.8",
-    "@angular/common": "6.0.6",
-    "@angular/compiler": "6.0.6",
-    "@angular/compiler-cli": "6.0.6",
-    "@angular/core": "6.0.6",
-    "@angular/forms": "6.0.6",
-    "@angular/http": "6.0.6",
-    "@angular/language-service": "6.0.6",
-    "@angular/platform-browser": "6.0.6",
-    "@angular/platform-browser-dynamic": "6.0.6",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.96",
-    "@wizardcoder/bl-model": "^0.14.7",
-    "codelyzer": "~3.1.1",
-    "core-js": "^2.5.3",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.1",
-    "karma-jasmine": "^1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.3.2",
-    "rxjs": "^6.2.1",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "2.7.2",
-    "webpack": "^4.12.1",
-    "webpack-dev-server": "^2.11.1",
-    "zone.js": "^0.8.26",
-    "ng-packagr": "^3.0.3",
-    "@auth0/angular-jwt": "^2.0.0"
-  },
-  "peerDependencies": {
-    "@angular/common": "6.0.6",
-    "@angular/core": "6.0.6"
-  }
+	"name": "@wizardcoder/bl-connect",
+	"version": "0.6.4-0",
+	"license": "MIT",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve --aot",
+		"test": "ng test",
+		"lint": "ng lint",
+		"e2e": "ng e2e",
+		"build:lib": "ng-packagr -p package.json",
+		"lib:pub": "npm run build:lib && npm publish ./dist/@wizardcoder/bl-connect",
+		"blink": "npm run build:lib && npm link dist/bl-connect"
+	},
+	"ngPackage": {
+		"lib": {
+			"entryFile": "public_api.ts"
+		},
+		"dest": "./dist/@wizardcoder/bl-connect"
+	},
+	"$schema": "../../node_modules/ng-packagr/package.schema.json",
+	"private": false,
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^0.6.8",
+		"@angular-devkit/core": "^0.6.8",
+		"@angular/cli": "6.0.8",
+		"@angular/common": "6.0.6",
+		"@angular/compiler": "6.0.6",
+		"@angular/compiler-cli": "6.0.6",
+		"@angular/core": "6.0.6",
+		"@angular/forms": "6.0.6",
+		"@angular/http": "6.0.6",
+		"@angular/language-service": "6.0.6",
+		"@angular/platform-browser": "6.0.6",
+		"@angular/platform-browser-dynamic": "6.0.6",
+		"@types/jasmine": "~2.5.53",
+		"@types/jasminewd2": "~2.0.2",
+		"@types/node": "^6.0.96",
+		"@wizardcoder/bl-model": "^0.14.7",
+		"codelyzer": "~3.1.1",
+		"core-js": "^2.5.3",
+		"jasmine-core": "~2.6.2",
+		"jasmine-spec-reporter": "~4.1.0",
+		"karma": "~1.7.0",
+		"karma-chrome-launcher": "~2.1.1",
+		"karma-cli": "~1.0.1",
+		"karma-coverage-istanbul-reporter": "^1.4.1",
+		"karma-jasmine": "^1.1.1",
+		"karma-jasmine-html-reporter": "^0.2.2",
+		"protractor": "^5.3.2",
+		"rxjs": "^6.2.1",
+		"ts-node": "~3.2.0",
+		"tslint": "~5.3.2",
+		"typescript": "2.7.2",
+		"webpack": "^4.12.1",
+		"webpack-dev-server": "^2.11.1",
+		"zone.js": "^0.8.26",
+		"ng-packagr": "^3.0.3",
+		"@auth0/angular-jwt": "^2.0.0"
+	},
+	"peerDependencies": {
+		"@angular/common": "6.0.6",
+		"@angular/core": "6.0.6"
+	}
 }
