--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@wizardcoder/bl-connect",
-	"version": "0.6.4-11",
+	"version": "0.7.0",
 	"license": "MIT",
 	"scripts": {
 		"ng": "ng",
