feat: added UsernameAndPasswordError and UserAlreadyExistError

--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
 		"@angular/language-service": "6.0.6",
 		"@angular/platform-browser": "6.0.6",
 		"@angular/platform-browser-dynamic": "6.0.6",
+		"@auth0/angular-jwt": "^2.0.0",
 		"@types/jasmine": "~2.5.53",
 		"@types/jasminewd2": "~2.0.2",
 		"@types/node": "^6.0.96",
-		"@wizardcoder/bl-model": "^0.14.7",
+		"@wizardcoder/bl-model": "^0.15.3",
 		"codelyzer": "~3.1.1",
 		"core-js": "^2.5.3",
 		"jasmine-core": "~2.6.2",
@@ -47,16 +48,15 @@
 		"karma-coverage-istanbul-reporter": "^1.4.1",
 		"karma-jasmine": "^1.1.1",
 		"karma-jasmine-html-reporter": "^0.2.2",
-		"protractor": "^5.3.2",
+		"ng-packagr": "^3.0.3",
+		"protractor": "^5.4.0",
 		"rxjs": "^6.2.1",
 		"ts-node": "~3.2.0",
 		"tslint": "~5.3.2",
 		"typescript": "2.7.2",
-		"webpack": "^4.12.1",
+		"webpack": "^4.16.5",
 		"webpack-dev-server": "^2.11.1",
-		"zone.js": "^0.8.26",
-		"ng-packagr": "^3.0.3",
-		"@auth0/angular-jwt": "^2.0.0"
+		"zone.js": "^0.8.26"
 	},
 	"peerDependencies": {
 		"@angular/common": "6.0.6",
