--- a/package.json
+++ b/package.json
@@ -61,5 +61,10 @@
 	"peerDependencies": {
 		"@angular/common": "6.0.6",
 		"@angular/core": "6.0.6"
+	},
+	"dependencies": {
+		"file-saver": "^1.3.8",
+		"file-type": "^9.0.0",
+		"jspdf": "^1.4.1"
 	}
 }
