--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@wizardcoder/bl-connect",
-	"version": "0.9.0",
+	"version": "0.9.1",
 	"license": "MIT",
 	"scripts": {
 		"ng": "ng",
@@ -63,6 +63,5 @@
 		"@angular/core": "6.0.6",
 		"file-saver": "^1.3.8"
 	},
-	"dependencies": {
-	}
+	"dependencies": {}
 }
