--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"@types/jasmine": "~2.5.53",
 		"@types/jasminewd2": "~2.0.2",
 		"@types/node": "^6.0.96",
-		"@wizardcoder/bl-model": "^0.15.3",
+		"@wizardcoder/bl-model": "^0.16.2",
 		"codelyzer": "~3.1.1",
 		"core-js": "^2.5.3",
 		"jasmine-core": "~2.6.2",
@@ -63,5 +63,7 @@
 		"@angular/core": "6.0.6",
 		"file-saver": "^1.3.8"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"file-saver": "^2.0.0-rc.4"
+	}
 }
