--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"license": "MIT",
 	"scripts": {
 		"ng": "ng",
-		"start": "ng serve --aot",
+		"start": "ng serve --aot --port 4300",
+    "watch": "npm start",
 		"test": "ng test",
 		"lint": "ng lint",
 		"e2e": "ng e2e",
@@ -40,6 +41,7 @@
 		"@wizardcoder/bl-model": "^0.16.2",
 		"codelyzer": "~3.1.1",
 		"core-js": "^2.5.3",
+		"file-saver": "^2.0.0",
 		"jasmine-core": "~2.6.2",
 		"jasmine-spec-reporter": "~4.1.0",
 		"karma": "~1.7.0",
