--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"karma-jasmine": "^1.1.1",
 		"karma-jasmine-html-reporter": "^0.2.2",
 		"ng-packagr": "^3.0.3",
+		"prettier": "^1.17.0",
 		"protractor": "^5.4.0",
 		"rxjs": "^6.2.1",
 		"ts-node": "~3.2.0",
