--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
 	"devDependencies": {
 		"@angular-devkit/build-angular": "^0.13.8",
 		"@angular-devkit/core": "^0.6.8",
-		"@angular/cli": "6.0.8",
-		"@angular/common": "6.0.6",
-		"@angular/compiler": "6.0.6",
-		"@angular/compiler-cli": "6.0.6",
-		"@angular/core": "6.0.6",
-		"@angular/forms": "6.0.6",
-		"@angular/http": "6.0.6",
-		"@angular/language-service": "6.0.6",
-		"@angular/platform-browser": "6.0.6",
-		"@angular/platform-browser-dynamic": "6.0.6",
+		"@angular/cli": "^6.1.10",
+		"@angular/common": "^6.1.10",
+		"@angular/compiler": "^6.1.10",
+		"@angular/compiler-cli": "^6.1.10",
+		"@angular/core": "^6.1.10",
+		"@angular/forms": "^6.1.10",
+		"@angular/http": "^6.1.10",
+		"@angular/language-service": "^6.1.10",
+		"@angular/platform-browser": "^6.1.10",
+		"@angular/platform-browser-dynamic": "^6.1.10",
 		"@auth0/angular-jwt": "^2.0.0",
 		"@types/jasmine": "~2.5.53",
 		"@types/jasminewd2": "~2.0.2",
@@ -61,8 +61,8 @@
 		"zone.js": "^0.8.26"
 	},
 	"peerDependencies": {
-		"@angular/common": "6.0.6",
-		"@angular/core": "6.0.6",
+		"@angular/common": "^6.1.10",
+		"@angular/core": "^6.1.10",
 		"file-saver": "^2.0.0-rc.4"
 	}
 }
