--- a/package.json
+++ b/package.json
@@ -1,79 +1,82 @@
 {
-  "name": "@boklisten/bl-connect",
-  "version": "0.17.2",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve --aot --port 4200",
-    "watch": "npm start",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "build": "ng-packagr -p package.json",
-    "pub": "npm run build && npm publish ./dist/@boklisten/bl-connect"
-  },
-  "ngPackage": {
-    "lib": {
-      "entryFile": "public_api.ts"
-    },
-    "dest": "./dist/@boklisten/bl-connect"
-  },
-  "$schema": "../../node_modules/ng-packagr/package.schema.json",
-  "private": false,
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.8",
-    "@angular-devkit/core": "^0.6.8",
-    "@angular/cli": "^6.1.10",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
-    "@angular/language-service": "^6.1.10",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@auth0/angular-jwt": "^2.0.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.96",
-    "@boklisten/bl-model": "^0.24.0",
-    "codelyzer": "~3.1.1",
-    "core-js": "^2.5.3",
-    "file-saver": "^2.0.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.1",
-    "karma-jasmine": "^1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^3.0.3",
-    "prettier": "^1.17.0",
-    "protractor": "^5.4.0",
-    "rxjs": "^6.2.1",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "2.7.2",
-    "webpack": "^4.29.0",
-    "webpack-dev-server": "^2.11.1",
-    "zone.js": "^0.8.26"
-  },
-  "peerDependencies": {
-    "@angular/common": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "file-saver": "^2.0.0-rc.4"
-  },
-  "description": "A connecter module for talking to the **bl-api** from a Angular application. It should be viewed as a communication module only. Every HTTP request to `bl-api` is done through `bl-connect`.",
-  "main": "karma.conf.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/boklisten/bl-connect.git"
-  },
-  "author": "",
-  "bugs": {
-    "url": "https://github.com/boklisten/bl-connect/issues"
-  },
-  "homepage": "https://github.com/boklisten/bl-connect#readme"
+	"name": "@boklisten/bl-connect",
+	"version": "0.17.2",
+	"license": "MIT",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve --aot --port 4200",
+		"watch": "npm start",
+		"test": "ng test",
+		"lint": "eslint . --ignore-path .gitignore --fix",
+		"prettier": "prettier --write . --ignore-path .gitignore",
+		"e2e": "ng e2e",
+		"build": "ng-packagr -p package.json",
+		"pub": "npm run build && npm publish ./dist/@boklisten/bl-connect"
+	},
+	"ngPackage": {
+		"lib": {
+			"entryFile": "public_api.ts"
+		},
+		"dest": "./dist/@boklisten/bl-connect"
+	},
+	"$schema": "../../node_modules/ng-packagr/package.schema.json",
+	"private": false,
+	"devDependencies": {
+		"@angular-devkit/build-angular": "~0.1101.4",
+		"@angular-devkit/core": "^11.1.4",
+		"@angular/cli": "^11.1.4",
+		"@angular/common": "^11.1.2",
+		"@angular/compiler": "^11.1.2",
+		"@angular/compiler-cli": "^11.1.2",
+		"@angular/core": "^11.1.2",
+		"@angular/forms": "^11.1.2",
+		"@angular/language-service": "^11.1.2",
+		"@angular/platform-browser": "^11.1.2",
+		"@angular/platform-browser-dynamic": "^11.1.2",
+		"@auth0/angular-jwt": "^5.0.2",
+		"@boklisten/bl-model": "^0.25.0",
+		"@types/jasmine": "~3.6.3",
+		"@types/jasminewd2": "~2.0.8",
+		"@types/node": "^14.14.25",
+		"@typescript-eslint/eslint-plugin": "^4.15.0",
+		"@typescript-eslint/parser": "^4.15.0",
+		"codelyzer": "^6.0.1",
+		"core-js": "^3.8.3",
+		"eslint": "^7.19.0",
+		"file-saver": "^2.0.0",
+		"jasmine-core": "~3.6.0",
+		"jasmine-spec-reporter": "~6.0.0",
+		"karma": "~6.1.0",
+		"karma-chrome-launcher": "~3.1.0",
+		"karma-cli": "~2.0.0",
+		"karma-coverage-istanbul-reporter": "~3.0.3",
+		"karma-jasmine": "~4.0.1",
+		"karma-jasmine-html-reporter": "^1.5.4",
+		"ng-packagr": "^11.2.0",
+		"prettier": "^2.2.1",
+		"protractor": "~7.0.0",
+		"rxjs": "^6.6.3",
+		"ts-node": "~9.1.1",
+		"typescript": "^4.1.4",
+		"webpack": "^4.46.0",
+		"webpack-dev-server": "^3.11.2",
+		"zone.js": "~0.11.3"
+	},
+	"peerDependencies": {
+		"file-saver": "^2.0.5"
+	},
+	"description": "A connecter module for talking to the **bl-api** from a Angular application. It should be viewed as a communication module only. Every HTTP request to `bl-api` is done through `bl-connect`.",
+	"main": "karma.conf.js",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/boklisten/bl-connect.git"
+	},
+	"author": "",
+	"bugs": {
+		"url": "https://github.com/boklisten/bl-connect/issues"
+	},
+	"homepage": "https://github.com/boklisten/bl-connect#readme",
+	"dependencies": {
+		"tslib": "^2.1.0"
+	}
 }
