--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
 	"compileOnSave": false,
 	"compilerOptions": {
 		"baseUrl": ".",
+		"downlevelIteration": true,
+		"importHelpers": true,
+		"module": "es2020",
 		"outDir": "./dist/out-tsc",
 		"sourceMap": true,
 		"declaration": false,
@@ -9,13 +12,8 @@
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"target": "es2015",
-		"typeRoots": [
-			"node_modules/@types"
-		],
-		"lib": [
-			"es2017",
-			"dom"
-		]
+		"typeRoots": ["node_modules/@types"],
+		"lib": ["es2017", "dom"]
 	},
-		"preserveWhitespaces": "off"
+	"preserveWhitespaces": "off"
 }
