--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
 	"version": "0.19.1",
 	"license": "MIT",
 	"scripts": {
+		"start": "ng serve",
+		"dev": "yarn start",
+		"publish": "npm run build && npm publish ./dist/@boklisten/bl-connect",
 		"ng": "ng",
-		"start": "ng serve --aot --port 4200",
-		"watch": "npm start",
 		"test": "ng test",
-		"lint": "eslint . --ignore-path .gitignore --fix",
-		"prettier": "prettier --write . --ignore-path .gitignore",
 		"e2e": "ng e2e",
 		"build": "ng-packagr -p package.json",
-		"pub": "npm run build && npm publish ./dist/@boklisten/bl-connect"
+		"lint": "eslint . --ignore-path .gitignore --fix",
+		"prettier": "prettier --write . --ignore-path .gitignore"
 	},
 	"ngPackage": {
 		"lib": {
@@ -22,45 +22,45 @@
 	"$schema": "../../node_modules/ng-packagr/package.schema.json",
 	"private": false,
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~0.1101.4",
-		"@angular-devkit/core": "^11.1.4",
-		"@angular/cli": "^11.1.4",
-		"@angular/common": "^11.1.2",
-		"@angular/compiler": "^11.1.2",
-		"@angular/compiler-cli": "^11.1.2",
-		"@angular/core": "^11.1.2",
-		"@angular/forms": "^11.1.2",
-		"@angular/language-service": "^11.1.2",
-		"@angular/platform-browser": "^11.1.2",
-		"@angular/platform-browser-dynamic": "^11.1.2",
+		"@angular-devkit/build-angular": "~12.0.0",
+		"@angular-devkit/core": "^12.0.0",
+		"@angular/cli": "^12.0.0",
+		"@angular/common": "^12.0.0",
+		"@angular/compiler": "^12.0.0",
+		"@angular/compiler-cli": "^12.0.0",
+		"@angular/core": "^12.0.0",
+		"@angular/forms": "^12.0.0",
+		"@angular/language-service": "^12.0.0",
+		"@angular/platform-browser": "^12.0.0",
+		"@angular/platform-browser-dynamic": "^12.0.0",
 		"@auth0/angular-jwt": "^5.0.2",
 		"@boklisten/bl-model": "^0.25.0",
-		"@types/jasmine": "~3.6.3",
+		"@types/jasmine": "^3.7.4",
 		"@types/jasminewd2": "~2.0.8",
-		"@types/node": "^14.14.25",
+		"@types/node": "^15.3.0",
 		"@typescript-eslint/eslint-plugin": "^4.15.0",
 		"@typescript-eslint/parser": "^4.15.0",
 		"codelyzer": "^6.0.1",
 		"core-js": "^3.8.3",
 		"eslint": "^7.19.0",
 		"file-saver": "^2.0.0",
-		"jasmine-core": "~3.6.0",
-		"jasmine-spec-reporter": "~6.0.0",
-		"karma": "~6.1.0",
+		"jasmine-core": "^3.7.1",
+		"jasmine-spec-reporter": "^7.0.0",
+		"karma": "~6.3.2",
 		"karma-chrome-launcher": "~3.1.0",
 		"karma-cli": "~2.0.0",
 		"karma-coverage-istanbul-reporter": "~3.0.3",
 		"karma-jasmine": "~4.0.1",
 		"karma-jasmine-html-reporter": "^1.5.4",
-		"ng-packagr": "^11.2.0",
+		"ng-packagr": "^12.0.0",
 		"prettier": "^2.2.1",
 		"protractor": "~7.0.0",
-		"rxjs": "^6.6.3",
+		"rxjs": "^7.0.1",
 		"ts-node": "~9.1.1",
 		"typescript": "^4.1.4",
-		"webpack": "^4.46.0",
+		"webpack": "^5.37.0",
 		"webpack-dev-server": "^3.11.2",
-		"zone.js": "~0.11.3"
+		"zone.js": "~0.11.4"
 	},
 	"peerDependencies": {
 		"file-saver": "^2.0.5"
