build: fix pub command

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prettier:check": "prettier --check '**/*.{html,js,ts,tsx,md,json,yml,css,scss}' --ignore-path=.gitignore",
     "lint": "eslint . --ignore-path .gitignore",
     "test": "ng test",
-    "pub": "yarn build && npm publish ./dist/@boklisten/bl-connect"
+    "pub": "yarn build && cd dist/@boklisten/bl-connect && npm publish"
   },
   "ngPackage": {
     "lib": {
