--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,9 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
               with:
-                  cache: "npm"
+                  cache: "yarn"
             - name: Install dependencies
-              run: npm ci
+              run: yarn
             - name: Cache install
               uses: actions/cache@v2
               with:
@@ -32,4 +32,4 @@ jobs:
                   path: ./node_modules/
                   key: ${{ github.sha }}-install
             - name: prettier
-              run: npm run prettier:check
+              run: yarn prettier:check
