--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
 	"name": "@boklisten/bl-connect",
-	"version": "0.19.6",
+	"version": "0.19.10",
 	"license": "MIT",
 	"scripts": {
-		"dev": "npm serve",
+		"dev": "yarn serve",
 		"build": "ng-packagr -p package.json",
 		"serve": "ng serve --aot --port 4200",
 		"prettier": "prettier --write '**/*.{html,js,ts,tsx,md,json,yml,css,scss}' --ignore-path=.gitignore",
 		"prettier:check": "prettier --check '**/*.{html,js,ts,tsx,md,json,yml,css,scss}' --ignore-path=.gitignore",
 		"lint": "eslint . --ignore-path .gitignore",
 		"test": "ng test",
-		"pub": "npm run build && npm publish ./dist/@boklisten/bl-connect"
+		"blink": "yarn build && cd dist/@boklisten/bl-connect && yarn link",
+		"pub": "yarn build && cd dist/@boklisten/bl-connect && npm publish"
 	},
 	"ngPackage": {
 		"lib": {
@@ -21,7 +22,7 @@
 	"$schema": "../../node_modules/ng-packagr/package.schema.json",
 	"private": false,
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~0.1101.4",
+		"@angular-devkit/build-angular": "~0.1102.14",
 		"@angular-devkit/core": "^11.1.4",
 		"@angular/cli": "^11.1.4",
 		"@angular/common": "^11.1.2",
