--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"@angular/language-service": "^11.1.2",
 		"@angular/platform-browser": "^11.1.2",
 		"@angular/platform-browser-dynamic": "^11.1.2",
-		"@boklisten/bl-model": "^0.25.37",
+		"@boklisten/bl-model": "^0.26.5",
 		"@types/jasmine": "~3.6.3",
 		"@types/jasminewd2": "~2.0.8",
 		"@types/node": "^14.14.25",
@@ -79,7 +79,7 @@
 	},
 	"homepage": "https://github.com/boklisten/bl-connect#readme",
 	"dependencies": {
-		"tslib": "^2.1.0",
-		"@auth0/angular-jwt": "5.0.2"
+		"@auth0/angular-jwt": "5.0.2",
+		"tslib": "^2.1.0"
 	}
 }
